start of work on the interface

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <p>How many points you want to transform?</p>
+        <input value="1" type="range" min="1" max="8" class="points-number-input">
+        <p class="points-number-display">1</p>
+        <button class="accept-btn">Accept</button>
+        <div class="main-container">
+            <div class="point-number-container"></div>
+            <div class="container">
+                <div>
+                    <p class="point-indicator-x">X</p>
+                    <p class="point-indicator-y">Y</p>
+                </div>
+                <div class="points-input-container"></div>
+            </div>
+        </div>
     </body>
 </html>
