added confirm btn

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <p class="point-indicator-y">Y</p>
                 </div>
                 <div class="points-input-container"></div>
+                <button class="confirm-btn">Confirm</button>
             </div>
         </div>
     </body>
